<field name="porcent"/>

--- a/odt_tvp_v2/views/diseno.xml
+++ b/odt_tvp_v2/views/diseno.xml
@@ -214,6 +214,8 @@
                                         <field name="tipo_material"/>
                                         <field name="medidas"/>
                                         <field name="formatos"/>
+                                        <field name="porcent"/>
+
                                     </tree>
                                     </field>
                               </page>                               
